[gd_scene load_steps=3 format=3 uid="uid://bcbl7ac53rpn"]

[ext_resource type="Script" path="res://ArrowThrower.gd" id="1_fr1yo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4l2m3"]
radius = 110.041

[node name="ArrowThrower" type="Node2D"]
script = ExtResource("1_fr1yo")

[node name="FieldOfView" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldOfView"]
shape = SubResource("CircleShape2D_4l2m3")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 10.0

[node name="CooldownBetween" type="Timer" parent="."]
wait_time = 0.6

[connection signal="body_entered" from="FieldOfView" to="." method="_on_field_of_view_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
